[package]
name = "superdev-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
bs58 = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
